2010-02-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, elementCapabilitiesProvider.c:
	Cleaned up unused vars

2010-02-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2932809 ] sfcb 1.3.6 crashes when provider user is set to sfcb
	(updated patch)

2010-02-01  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am
	[ 2875050 ] default MOFs should allow for multiple files ( fixed the build breaks while make install )

2010-01-28  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2875050 ] default MOFs should allow for multiple files

2010-01-28 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/GenMI.pl, IndRetryTest.sh, RICreateHandler.XML
	  RIEnumIS.XML, RIGetSub.XML, Makefile.am:
	[ 2920773 ] Tests for reliable indications

2010-01-28  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 2655854 ] Common Provider invokes Init and CleanUp more than once

2010-01-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2939874 ] Serious provider id mismatch after provider reload

	* providerRegister.h, providerRegister.c, providerMgr.c:
	[ 2934540 ] sfcb may respond with incorrect association provider (refix)
	
2010-01-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 2937577 ] Some SLP-specific code not ifdef'd

2010-01-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, indCIMXMLExport.c
	[ 2935931 ] Indications to file:// urls never fail.

2010-01-18  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.h, providerRegister.c, providerMgr.c:
	[ 2934540 ] sfcb may respond with incorrect association provider

2010-01-15 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerRegister.c
	[ 2932809 ] sfcb 1.3.6 crashes when provider user is set to sfcb
	(patch by dmacvicar)

2010-01-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c: